--- a/package.json
+++ b/package.json
@@ -71,9 +71,13 @@
     "html-webpack-plugin": "^2.28.0",
     "null-loader": "^0.1.1",
     "react": "^15.5.4",
+    "react-count-down": "^1.1.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-share": "^1.15.1",
+    "react-soundcloud-widget": "^2.0.4",
+    "react-twitter-widgets": "^1.4.0",
     "redux": "^3.6.0",
     "style-loader": "^0.18.0",
     "webpack": "2.6.0"
