--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^15.5.4",
     "react-count-down": "^1.1.0",
     "react-dom": "^15.5.4",
+    "react-player": "^0.20.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-share": "^1.15.1",
