--- a/package.json
+++ b/package.json
@@ -69,10 +69,12 @@
     "history": "^4.6.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "moment": "^2.18.1",
     "null-loader": "^0.1.1",
     "react": "^15.5.4",
     "react-count-down": "^1.1.0",
     "react-dom": "^15.5.4",
+    "react-moment": "^0.6.4",
     "react-player": "^0.20.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
